objects/ARVault__c.object
<CustomObject>
    <fields>
        <fullName>AutoRabitTest__c</fullName>
        <label>AutoRabitTest</label>
        <referenceTo>AutoRabitTest__c</referenceTo>
        <relationshipLabel>ARVault</relationshipLabel>
        <relationshipName>ARVault</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <referenceTo>FieloEE__Category__c</referenceTo>
        <relationshipLabel>ARVault</relationshipLabel>
        <relationshipName>ARVault</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Phone__c</fullName>
        <label>Customer Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <label>ARVault</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ARVault Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ARVault</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>